--- a/NotebookAnalysis.ipynb
+++ b/NotebookAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "34be5935-9ca6-47b0-b443-2dd2b9d244a4",
    "metadata": {},
    "outputs": [],
@@ -30,14 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "8cfc3156-eb09-429e-b688-2386d40c5e14",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Separate the entire file into an array that has comma separated values.\n",
     "\n",
-    "os.chdir('C:/users/jadse/Desktop/Postdoc/Server/')\n",
+    "directory='C:/users/jadse/Github/MauzerollServer/ASC2HDF5Export/'\n",
+    "os.chdir(directory)\n",
     "file='10umscratchtestafterxpsnotebooktest2.asc'\n",
     "\n",
     "with open(file, 'r') as f:\n",
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "ce0367e3-5e38-4417-aa00-b027631744f8",
    "metadata": {},
    "outputs": [
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "bb7aaf7d-d9c3-4c8b-a9fc-d00e9598acf7",
    "metadata": {},
    "outputs": [
@@ -140,14 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "0b83f453-fccf-4fba-9a2e-b9b114399801",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Export an HDF5 file with the information stored in stringArrays\n",
     "\n",
-    "os.chdir('C:/users/jadse/Desktop/Postdoc/Server/')\n",
+    "os.chdir(directory)\n",
     "\n",
     "def getColumn(listofLists,column):\n",
     "    return[item[column] for item in listofLists[3:]]\n",
@@ -227,51 +228,16 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "616968c1-eaa4-4f4a-ba86-54b7cf69f9f1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "    OCP[V]\n",
-      "62696\n",
-      "109.95\n",
-      "  X-pos[m]0\n",
-      "True\n",
-      "True\n",
-      "[-0.015, 10.047, 20.035, 30.045, 40.035, 50.04, 60.05, 70.065, 80.052, 90.06, 100.05, 110.06, 120.06, 130.08, 140.05, 149.97, 160.08, 170.08, 180.08, 189.97, 199.97, 209.96, 219.97, 229.97, 239.96, 249.97, 270.05, 280.06, 290.04, 300.08, 299.95, 289.93, 279.93, 269.95, 259.94, 249.93, 239.95, 229.94, 219.94, 209.94, 199.93, 189.93, 179.94, 169.94, 159.94, 149.94, 139.94, 129.95, 119.94, 109.95, 99.942, 89.945, 79.947, 69.945, 59.955, 49.947, 39.94, 29.942, 19.945, 9.94, -0.05, -0.0575, 9.985, 20.01, 30.017, 40.01, 50.012, 60.012, 70.01, 80.0, 90.025, 99.98, 110.01, 120.03, 130.02, 139.99, 150.04, 160.01, 170.01, 180.0, 190.05, 200.02, 210.08, 219.99, 229.99, 240.05, 250.05, 259.98, 270.05, 279.98, 290.08, 300.01, 299.95, 289.94, 279.95, 269.92, 259.95, 249.93, 239.95, 229.93, 219.93, 209.94, 199.94, 189.95, 179.93, 169.94, 159.93, 149.95, 139.94, 129.94, 119.94, 109.93, 99.955, 89.932, 79.942, 69.935, 59.95, 49.95, 39.95, 29.95, 19.95, 9.935, -0.1025, -0.0425, 10.002, 20.047, 29.96, 39.98, 49.982, 59.99, 69.975, 79.97, 89.98, 99.97, 109.97, 119.97, 129.96, 139.96, 149.97, 159.98, 169.97, 179.97, 190.0, 199.98, 209.98, 219.99, 229.97, 239.97, 249.97, 259.98, 269.97, 279.98, 289.98, 299.97, 299.96, 289.95, 279.94, 269.94, 259.95, 249.93, 239.94, 229.94, 219.94, 209.94, 199.95, 189.95, 179.94, 169.95, 159.95, 149.94, 139.95, 129.95, 119.95, 109.94, 99.947, 89.95, 79.947, 69.945, 59.95, 49.95, 39.952, 29.937, 19.947, 9.9425, -0.0475, -0.0575, 9.97, 19.972, 29.952, 39.972, 49.977, 59.97, 69.972, 79.977, 89.962, 99.965, 109.97, 119.97, 129.98, 139.97, 149.97, 159.96, 169.98, 179.98, 189.98, 199.98, 209.98, 219.98, 229.97, 239.98, 249.98, 259.98, 269.96, 279.98, 289.99, 299.98, 299.96, 289.94, 279.94, 269.94, 259.95, 249.94, 239.94, 229.94, 219.95, 209.94, 199.95, 189.95, 179.94, 169.94, 159.95, 149.95, 139.95, 129.94, 119.95, 109.95, 99.947, 89.947, 79.947, 69.947, 59.957, 49.95, 39.952, 29.947, 19.945, 9.9525, -0.045, -0.06, 9.975, 19.975, 29.977, 39.975, 49.975, 59.967, 69.972, 79.982, 89.962, 99.965, 109.98, 119.97, 129.97, 139.96, 149.95, 159.98, 169.97, 179.98, 189.97, 199.98, 209.98, 219.99, 229.98, 239.97, 249.97, 259.98, 269.97, 279.98, 289.99, 299.97, 299.96, 289.95, 279.94, 269.94, 259.95, 249.94, 239.95, 229.94, 219.94, 209.94, 199.95, 189.95, 179.94, 169.94, 159.95, 149.94, 139.95, 129.93, 119.95, 109.95, 99.95, 89.942, 79.947, 69.95, 59.945, 49.942, 39.955, 29.945, 19.945, 9.945, -0.0525, -0.0525, 9.9625, 19.967, 29.995, 39.965, 49.96, 59.967, 69.967, 79.97, 89.962, 99.96, 109.97, 119.97, 129.97, 139.97, 149.97, 159.97, 169.99, 179.97, 189.98, 199.96, 209.98, 219.99, 229.96, 239.98, 249.98, 259.98, 269.97, 279.98, 289.98, 299.98]\n"
-     ]
-    }
-   ],
-   "source": [
-    "i=1\n",
-    "filename='testexport.hdf5'\n",
-    "print(stringArrays[i][0][1]=='    OCP[V]')\n",
-    "print(stringArrays[i][0][1])\n",
-    "print(columnPosition[105])\n",
-    "print(float('109.95'))\n",
-    "with h5py.File(filename,'r') as f:\n",
-    "    print(list(f[user][date][getScanString(96)].attrs.items())[2][0]) \n",
-    "    print(list(f[user][date][getScanString(5)].attrs.items())[0][0].replace(\" \",\"\")[0:5]=='X-pos')\n",
-    "    print(list(f[user][date][getScanString(1)].attrs.items())[5][0].replace(\" \",\"\")[0:5]=='Z-pos')\n",
-    "    print(list(f[user][date]['position']['Xposition']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "id": "fd4d9fad-e7ff-4d5f-aff1-653bfea05ede",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1b3c0313070>]"
+       "[<matplotlib.lines.Line2D at 0x1d661440160>]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
